segunda modificacion en html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<div>Hello World</div>
+<html>
+   <body>
+      <h1>
+         Titulo de la pagina
+      </h1>
+      <div>Hello World</div>
+   </body>
+</html>
