Agregado parrafo en index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
       <h1>
          Titulo de la pagina
       </h1>
+
       <div>Hello World</div>
+      <p>Hello People.</p>
+
    </body>
 </html>
